@@ -3,3 +3,7 @@
 Download JavaFX
 https://gluonhq.com/products/javafx/
 
+## Windows
+`javac --module-path "<Location of JavaFX Library>" --add-modules javafx.controls,javafx.fxml DobutsuShogi.java
+
+java --module-path "<Location of JavaFX Library>" --add-modules javafx.controls,javafx.fxml DobutsuShogi`
